<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/nightlife_city"
    tools:context=".MainActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />


    <TextView
        android:id="@+id/tv_connect_with"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:fontFamily="@font/sora"
        android:gravity="center_horizontal|top"
        android:text="@string/connect_with"
        android:textAppearance="@style/connect_with"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ll_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />


    <LinearLayout
        android:id="@+id/ll_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="@+id/tv_forgot_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_email_ph"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@drawable/input_edt_bg"
            android:fontFamily="@font/sora"

            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="4dp"
                android:background="@null"
                android:drawableEnd="@drawable/vector"
                android:fontFamily="@font/sora"
                android:hint="@string/id_email_ph"

                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#59FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_edt_bg"
                android:fontFamily="@font/sora"
                android:hint="@string/password"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_input" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginHorizontal="28dp"
        android:background="@drawable/login_btn_bg"
        android:fontFamily="@font/sora"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_pass" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sora"
        android:text="@string/or_sign_in_u"
        android:textAppearance="@style/or_signin_u"
        app:layout_constraintBottom_toTopOf="@id/finger_print"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <ImageButton
        android:id="@+id/finger_print"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/social_btn_bg"
        android:contentDescription="finger_print"
        android:src="@drawable/ic_finger_print"
        app:layout_constraintBottom_toTopOf="@id/ll_version"
        app:layout_constraintEnd_toStartOf="@id/google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up" />

    <ImageButton
        android:id="@+id/google"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/social_btn_bg"
        android:contentDescription="google"
        android:nextFocusLeft="@drawable/ic_finger_print"
        android:src="@drawable/google_icon"
        app:layout_constraintBottom_toTopOf="@id/ll_version"
        app:layout_constraintEnd_toStartOf="@id/facebook"
        app:layout_constraintStart_toEndOf="@+id/finger_print"
        app:layout_constraintTop_toBottomOf="@id/sign_up" />


    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/social_btn_bg"
        android:contentDescription="facebook"
        android:src="@drawable/fb_icon"
        app:layout_constraintBottom_toTopOf="@id/ll_version"
        app:layout_constraintEnd_toStartOf="@id/linkedin"
        app:layout_constraintStart_toEndOf="@id/google"
        app:layout_constraintTop_toBottomOf="@id/sign_up" />

    <ImageButton
        android:id="@+id/linkedin"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/social_btn_bg"
        android:contentDescription="linkedin"
        android:src="@drawable/linkedin_icon"
        app:layout_constraintBottom_toTopOf="@id/ll_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/facebook"
        app:layout_constraintTop_toBottomOf="@id/sign_up" />

    <LinearLayout
        android:id="@+id/ll_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finger_print">

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sora"
            android:text="@string/version_1_0"
            android:textAppearance="@style/version_1_0" />

        <TextView
            android:id="@+id/create_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/sora"
            android:text="@string/create_account"
            android:textAppearance="@style/create_acco" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>