<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/nightlife_city"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/v_gradient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="-24dp"
                android:background="@drawable/gradient" />

            <TextView
                android:id="@+id/tv_connect_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="134dp"
                android:layout_marginRight="65dp"
                android:fontFamily="@font/sora"
                android:gravity="center_horizontal|top"
                android:text="@string/connect_with"
                android:textAppearance="@style/connect_with"
                android:textSize="28sp"
                android:textStyle="bold" />
        </FrameLayout>

        <RelativeLayout

            android:id="@+id/group_1"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="280dp"
            android:layout_marginRight="28dp">

            <EditText
                android:id="@+id/id_email_ph"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/chat_input"
                android:drawableEnd="@drawable/vector"
                android:fontFamily="@font/sora"
                android:hint="@string/id_email_ph"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/group_2"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_below="@+id/group_1"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="28dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:hintEnabled="false"
            app:hintTextColor="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#80FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/chat_input"
                android:fontFamily="@font/sora"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:paddingLeft="16dp"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group_2"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="234dp"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_pass"
            android:textAppearance="@style/forgot_pass" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_below="@+id/tv_forgot_pass"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="28dp"
            android:background="@drawable/login_rectangle"
            android:fontFamily="@font/sora"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sora"
            android:text="@string/or_sign_in_u"
            android:textAppearance="@style/or_signin_u" />

        <LinearLayout
            android:id="@+id/social"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_below="@id/sign_up"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/icon_shape"
                android:contentDescription="finger_print"
                android:src="@drawable/ic_finger_print" />

            <ImageButton
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginLeft="32dp"
                android:background="@drawable/icon_shape"
                android:contentDescription="google"
                android:src="@drawable/google_icon" />


            <ImageButton
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginLeft="32dp"
                android:background="@drawable/icon_shape"
                android:contentDescription="facebook"
                android:src="@drawable/fb_icon" />

            <ImageButton
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginLeft="32dp"
                android:background="@drawable/icon_shape"
                android:contentDescription="linkedin"
                android:src="@drawable/linkedin_icon" />
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>